--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body,
     h3,
     h4,
     h5 {
-      font-family: "Raleway", sans-serif
+      font-family:"Lucida Console", Monaco, monospace;
     }
 
     .checked {
