--- a/style-grey-cells.css
+++ b/style-grey-cells.css
@@ -15,3 +15,7 @@
     color: #fff !important;
     background-color: #2b303d !important
 }
+
+.grey-cells:hover {color:#000 !important; background-color:#dfcfbe !important}
+.grey-cells-text:hover {color:#dfcfbe !important}
+.grey-cells-border:hover {border-color:#dfcfbe !important}
