--- a/style.css
+++ b/style.css
@@ -1,77 +1,28 @@
 body,
-    h1,
-    h2,
-    h3,
-    h4,
-    h5 {
-      font-family:"Lucida Console", Monaco, monospace;
-    }
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Lucida Console", Monaco, monospace;
+}
 
-    .checked {
-      color: orange;
-    }
+.checked {
+  color: orange;
+}
 
-    .mySlides {display:none}
-.w3-left, .w3-right, .w3-badge {cursor:pointer}
-.w3-badge {height:13px;width:13px;padding:0}
+.mySlides {
+  display: none
+}
 
+.w3-left,
+.w3-right,
+.w3-badge {
+  cursor: pointer
+}
 
-
-
-
-
-
-.w3-theme-l5 {color:#000 !important; background-color:#f3f4f7 !important}
-.w3-theme-l4 {color:#000 !important; background-color:#d7dbe3 !important}
-.w3-theme-l3 {color:#000 !important; background-color:#b0b6c8 !important}
-.w3-theme-l2 {color:#fff !important; background-color:#8892ac !important}
-.w3-theme-l1 {color:#fff !important; background-color:#636f8e !important}
-.w3-theme-d1 {color:#fff !important; background-color:#40485c !important}
-.w3-theme-d2 {color:#fff !important; background-color:#394052 !important}
-.w3-theme-d3 {color:#fff !important; background-color:#323848 !important}
-.w3-theme-d4 {color:#fff !important; background-color:#2b303d !important}
-.w3-theme-d5 {color:#fff !important; background-color:#242833 !important}
-
-.w3-theme-light {color:#000 !important; background-color:#f3f4f7 !important}
-.w3-theme-dark {color:#fff !important; background-color:#242833 !important}
-.w3-theme-action {color:#fff !important; background-color:#242833 !important}
-
-.w3-theme {color:#fff !important; background-color:#485167 !important}
-
-.w3-border-theme {border-color:#485167 !important}
-
-.w3-hover-theme:hover {color:#fff !important; background-color:#485167 !important}
-.w3-hover-text-theme:hover {color:#485167 !important}
-.w3-hover-border-theme:hover {border-color:#485167 !important}
-
-
-
-
-
-
-
-
-
-
-
-
-
-.w3-theme-l5 {color:#000 !important; background-color:#fdfcfb !important}
-.w3-theme-l4 {color:#000 !important; background-color:#f9f5f2 !important}
-.w3-theme-l3 {color:#000 !important; background-color:#f2ece5 !important}
-.w3-theme-l2 {color:#000 !important; background-color:#ece2d8 !important}
-.w3-theme-l1 {color:#000 !important; background-color:#e5d9cb !important}
-.w3-theme-d1 {color:#000 !important; background-color:#d1bba2 !important}
-.w3-theme-d2 {color:#000 !important; background-color:#c4a687 !important}
-.w3-theme-d3 {color:#fff !important; background-color:#b6926b !important}
-.w3-theme-d4 {color:#fff !important; background-color:#a67d52 !important}
-.w3-theme-d5 {color:#fff !important; background-color:#8a6844 !important}
-
-.w3-theme-light {color:#000 !important; background-color:#fdfcfb !important}
-.w3-theme-dark {color:#fff !important; background-color:#8a6844 !important}
-.w3-theme-action {color:#fff !important; background-color:#8a6844 !important}
-
-.w3-theme {color:#000 !important; background-color:#dfcfbe !important}
-.w3-text-theme {color:#dfcfbe !important}
-.w3-border-theme {border-color:#dfcfbe !important}
-
+.w3-badge {
+  height: 13px;
+  width: 13px;
+  padding: 0
+}
